// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  height: 1.125rem;
  margin-top: -1.0625rem;
  position: absolute;
  font-size: 1.125rem;
}

.c0[data-placement*="bottom"] {
  top: 0.375rem;
}

.c0[data-placement*="bottom"]::before {
  border-bottom: none;
  border-right: none;
}

.c0[data-placement*="top"] {
  bottom: -0.375rem;
}

.c0[data-placement*="top"]::before {
  border-top: none;
  border-left: none;
}

.c0::before {
  width: 1.375rem;
  height: 1.375rem;
  margin: auto;
  content: "";
  display: block;
  background: #fff;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  border: 1px solid #000;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Arrow  should match the snapshot when rtl 1`] = `
<DocumentFragment>
  .c0 {
  height: 1.125rem;
  margin-top: -1.0625rem;
  position: absolute;
  font-size: 1.125rem;
}

.c0[data-placement*="bottom"] {
  top: 0.375rem;
}

.c0[data-placement*="bottom"]::before {
  border-bottom: none;
  border-left: none;
}

.c0[data-placement*="top"] {
  bottom: -0.375rem;
}

.c0[data-placement*="top"]::before {
  border-top: none;
  border-right: none;
}

.c0::before {
  width: 1.375rem;
  height: 1.375rem;
  margin: auto;
  content: "";
  display: block;
  background: #fff;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  border: 1px solid #fff;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
